<resources>
    <string name="app_name">NoteApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addIconDesc">Add new note icon</string>
    <string name="adddesc">icon</string>
    <string name="saveIconDesc">Save icon</string>
    <string name="TagImg">tag image</string>
    <string name="FavoriteImg">Favorite note</string>
    <string name="note_description">Note Description</string>
    <string name="note_title">Note Title</string>
    <string name="NoteImg">Note Image</string>
    <string name="BackIcon">Back Image</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="iconAni">Icon Animation</string>

</resources>