<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"

    android:background="@drawable/list"
    android:layout_margin="10dp"

    >

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardCornerRadius="20dp"
        android:layout_marginEnd="5dp"
        >

        <ImageView
            android:id="@+id/listview_image"
            android:layout_width="130dp"
            android:layout_height="120dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            tools:ignore="ImageContrastCheck" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="7dp"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/listview_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/listview_item_short_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingTop="3dp"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="5dp"
            >

            <ImageView
                android:id="@+id/listview_item_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/TagImg" />

            <ImageView
                android:id="@+id/favoriteIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:contentDescription="@string/FavoriteImg" />

            <TextView
                android:id="@+id/listview_item_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end"
                android:textColor="@color/green"

                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>